edm/resources/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    metrics: prometheus-adminer-metrics
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - port: 8009
      targetPort: 8009
