edm/resources/adminer/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ws-security
spec:
  podSelector:
    matchLabels:
      run: adminer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ives
          podSelector:
            matchLabels:
              auth: ws-security
      ports:
        - protocol: TCP
          port: 8009
